--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 /* regole generali css */
 *{
   margin: 0;
@@ -18,19 +16,23 @@
   margin: 20px 20%;
 }
 
+body{
+  font-family: 'Montserrat', sans-serif;
+}
+
 /* parte header */
 
 header{
   height: 120px;
   /* debug */
-  background-color: pink;
+  /* background-color: pink; */
 }
 
 #logo{
   height: 40px;
   vertical-align: middle;
   width: auto;
-  margin: 10px 5px;
+  margin: 10px 0;
 }
 
 #headernav{
@@ -62,48 +64,78 @@ header{
   background-image: url(../img/banner.jpg);
   background-size: cover;
   background-position: center;
-  margin-top: 20px;
+  margin-top: 10px;
+  border-radius: 10px;
+  position: relative;
   /* debug */
-  background-color: lightyellow;
-  height: 50vh;
+  /* background-color: lightyellow; */
+  height: 400px;
+
+}
+
+.layover{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.banner-text{
+  position: absolute;
+  bottom: 60px;
+  left: 40px;
+  color: white;
+  width: 50%;
+}
+
+.paraf{
+  font-size: 15px;
 
 }
 
 
-
-section{
+/* section{
   background-color: blue;
 
-}
+} */
 
 
 .sezionet{
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   width: 100%;
-  padding: 20px 0;
+  padding: 15px 0;
   /* debug */
-  background-color: skyblue;
+  /* background-color: skyblue; */
   height: 80px;
 }
 
-p{
-  color: grey;
-  font-size: 12px;
-}
 
 .sezione2 {
   float: left;
   width: 25%;
   margin-bottom: 10px;
   /* debug */
-  background-color: skyblue;
-  height: 400px;
+  /* background-color: skyblue; */
+  height: 500px;
 }
 
-.sezione2 img{
-  height: 200px;
+.contenitore{
+  position: relative;
+
+}
+
+.contenitore > .image1{
+
+  height: 190px;
   width: 100%;
+  object-fit: cover;
+  padding: 0px;
+
 }
 
 
@@ -112,20 +144,30 @@ p{
   width: calc(50% - 20px);
   margin: 0 10px;
   /* debug */
-  background-color: orange;
-  height: 400px;
-
+  /* background-color: orange; */
+  height: 500px;
 }
 
-.sezione3 img{
-  height: 200px;
+
+
+.contenitore > .image2{
+  height: 190px;
   width: 100%;
+  object-fit: cover;
+
+
 }
 
 h5{
- margin: 5px 0;
-
+ margin: 10px 0;
+ margin-top: 20px;
 }
+
+p{
+  font-size: 12px;
+  color: grey;
+}
+
 
 /* #middle{
   background-image: url(../img/banner-2.jpg);
@@ -137,20 +179,15 @@ h5{
 
 /* zona footer */
 footer{
-  margin: 5px 0;
+  margin-top: 10px;
+  margin-bottom: 30px;
   height: 40px;
   /* debug */
-  background-color: darkviolet;
+  /* background-color: darkviolet; */
   text-align: center;
 }
-
-.love{
-  padding: 10px;
-  text-align: center;
-}
-
 
 .heart{
   color: red;
-  margin: 10px 0;
+  font-size: 15px;
 }
