--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@
 }
 
 #container{
-  margin: 20px 20%;
+  margin: 0 auto;
+  width: 70%;
 }
 
 body{
@@ -121,7 +122,7 @@ header{
   margin-bottom: 10px;
   /* debug */
   /* background-color: skyblue; */
-  height: 500px;
+  height: 450px;
 }
 
 .contenitore{
@@ -145,7 +146,7 @@ header{
   margin: 0 10px;
   /* debug */
   /* background-color: orange; */
-  height: 500px;
+  height: 450px;
 }
 
 
